--- a/ui.apps/src/main/content/jcr_root/apps/wknd/clientlibs/clientlib-site/main.less
+++ b/ui.apps/src/main/content/jcr_root/apps/wknd/clientlibs/clientlib-site/main.less
@@ -32,3 +32,5 @@
 @import "components/title/title.less";
 @import "components/contentfragment/contentfragment.less";
 @import "components/list/list.less";
+
+/* nav */
